# absence-of-noise

./: .env_example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/notebooks/: evaluate.ipynb  ingest_pipeline.ipynb  pdf_ocr.py
backend/rzd_bot/: __main__.py
backend/rzd_bot/config/: __init__.py  default.py  utils.py
backend/rzd_bot/endpoints/: __init__.py  documents.py  health_check.py  predict.py
backend/rzd_bot/schemas/: __init__.py  documents.py  rag.py
backend/rzd_bot/utils/chains/: __init__.py  rag.py
backend/rzd_bot/utils/common/: __init__.py  logs.py
backend/rzd_bot/utils/documents/: __init__.py  documents.py
frontend/: .env
frontend/components/: chat.vue
rzd_data/: qna.csv  qna.xlsx  qna2.csv
